Fix focus highligher overlap

--- a/modules/web/src/core/view/tree-view/file-tree.scss
+++ b/modules/web/src/core/view/tree-view/file-tree.scss
@@ -49,6 +49,7 @@
                 width: 100%;
                 height: 100%;
                 background-color: black;
+                margin-top: 1px;
                 opacity: 0.5;
                 z-index: 5;
             }
